...
            android:text="@string/label_ingredients"
            android:textColor="#212121"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
...
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Layout for Recipe Step Horizontal Recycler View -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipestep_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="25"
        tools:context=".ui.RecipeStepListActivity"
...
