<?xml version="1.0" encoding="utf-8"?>
<!-- Container Layout that displays list of recipes -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.RecipeListActivity"
    tools:showIn="@layout/activity_recipe_list">

    <LinearLayout
        android:id="@+id/recipe_recycler_view_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/progress_bar_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".ui.RecipeListActivity"
            tools:listitem="@layout/recipe_list_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>